fixing scrollbars on site
site had scrollbars due to bad css

--- a/index.css
+++ b/index.css
@@ -3,12 +3,16 @@
 html {
   height: 100%;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   background-color: #222831;
   position: relative;
-  height: 100%;
+  padding: 0;
+  margin: 0;
+  max-height: 100%;
   width: 100%;
 }
 
@@ -83,5 +87,5 @@ body {
 }
 
 .toBeDeleted {
-  
+
 }
